# deepvalue

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
config/: models.yaml  policy.yaml  screen_profiles.yaml
deploy/: .env.example  docker-compose.yml
deploy/app/: Dockerfile  crontab  entrypoint.sh
deploy/gateway/: Dockerfile  config.ini.tmpl  entrypoint.sh
notes/: deep-value-system-design.md  deployment-plan.md  earnings-capex-edge-prototype.md  tedium-premium-strategy.md  what-we-validated.md
results/: README.md  l3_anonymization_ic.csv  l3_leading_indicator_ic.csv  summary.json
scripts/: build_sic_map.py  edgar_prefetch.py  fmp_build_manifest.py  fmp_grab.py  fmp_survivorship_probe.py  l1_events_baseline.py  l1_quant_backtest.py  l1_sharadar_backtest.py  l1_value_quality.py  l1l3_funnel_backtest.py  l1l3_sharadar_backtest.py  l3_confound_check.py  l3_diff_backtest.py  l3_liquidity_split.py  l3_materiality_pilot.py  regenerate_results.py  run_funnel.py  sharadar_grab.py  sharadar_load.py
src/deepvalue/: models.py
src/deepvalue/agents/: __init__.py  deepdive.py  harness.py  loop.py  model_config.py  tools.py
src/deepvalue/calibration/: feedback.py  metrics.py  outcomes.py  run.py
src/deepvalue/contracts/: models.py
src/deepvalue/diff/: align.py  materiality.py
src/deepvalue/eval/: backtest.py  ic.py  scorecard.py  temporal.py
src/deepvalue/forward/: __init__.py  deterioration.py  notify.py  (+4 more)
tests/: test_agents.py  test_ic.py  test_prices.py  test_quant.py  test_screen.py  test_segmentation.py  test_sizing_calibration.py
(+24 files in other folders)
