[project]
name = "deepvalue"
version = "0.0.1"
description = "Graham-screen / Burry-lens forensic engine: reads SEC filings at scale to find concentrated, asset-backed long positions in neglected equities."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "claude-agent-sdk",        # L4/L5 agent harness (spec §13) — pin once integrated
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",             # EDGAR / FMP clients
    "pandas>=2.0",             # quant metrics, alignment
    "python-dotenv>=1.0",
    "duckdb>=1.5.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepvalue"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
